# PythonForDataScience

./: .gitignore  README.md
Array/ex00/: give_bmi.py
Array/ex01/: array2D.py
Array/ex02/: load_image.py
Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py  tester.py
Starting/ex03/: Null_not_found.py  tester.py
Starting/ex04/: whatis.py
Starting/ex05/: building.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py
Starting/ex09/: README.md  pyproject.toml
Starting/ex09/ft_package_wjuneo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
